- Implemented basic pie chart with border - Will add padding and hover information    tomorrow + plus line chart - Wanted to do more but working with <div> in d3 was trickier then expected

--- a/style.css
+++ b/style.css
@@ -57,3 +57,10 @@ nav li a:hover {
   width: inherit;
   align-self: center;
 }
+
+.other-vis {
+  display: flex;
+  height: 300px;
+  width: 50%;
+  margin: 0 auto;
+}
