--- a/style.css
+++ b/style.css
@@ -1,66 +1,88 @@
-
 * {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* Titles */
-.title {
-  text-align: center;
-}
+/* Suggested theme colours: #A3F564, #9be564 */
 
-h2 {
-  text-align: center;
+h1, h2 {
+  #text-align: center;
 }
 
 /* Navigation Bar */
 nav {
-  width: 50%;
-  margin: 0 auto;
+  overflow: hidden;
+}
+
+nav h1 {
+  #display: inline-block;
+  overflow: visible;
+  float: left;
+  padding: 0px 10px;
+  width: 20%;
+  height: auto;
 }
 
 nav ul {
+  display: flex;
+  justify-content: center;
+  width: 50%;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
 }
 
 nav li {
-  float: left;
-  width: 33%;
+  margin: 0px 10px;
 }
 
 nav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+  display: inline-block;
+  color: #333;
+  font-weight: bold;
+  padding: 10px 0px;
+  margin: 0px 10px;
   text-decoration: none;
+  border-bottom: 3px solid white;
 }
 
 nav li a:hover {
-  background-color: #111;
+  border-bottom: 3px solid #A3F564;
 }
 
 /* Content */
-.main-container {
-  display: flex;
-  justify-content: center;
-  height: 500px;
-  width: 50%;
+.vis-container {
+  text-align: center;
+  #height: 500px;
+  width: 75%;
   margin: 0 auto;
 }
 
 .main-vis {
-  height: 300px;
-  width: inherit;
-  align-self: center;
+  #height: 300px;
+  width: auto;
 }
 
-.other-vis {
+.main-vis iframe {
+  width: 100%;
+  height: 450px;
+}
+
+.sub-vis {
   display: flex;
+  justify-content: space-between;
   height: 300px;
-  width: 50%;
-  margin: 0 auto;
+  #margin: 0 auto;
+}
+
+.sub-vis-home {
+  width: 32.5%;
+  height: 200px;
+}
+
+.sub-vis-home iframe {
+  width: 85%;
+  height: 200px;
+  float: left;
+}
+
+.zoom {
+  float: right;
 }
