--- a/style.css
+++ b/style.css
@@ -58,9 +58,15 @@ nav li a:hover {
   align-self: center;
 }
 
-.other-vis {
+#other-vis {
   display: flex;
-  height: 300px;
+  height: 320px;
   width: 50%;
   margin: 0 auto;
+}
+
+.line {
+  fill: none;
+  stroke: slategrey;
+  stroke-width: 0.5;
 }
