--- a/style.css
+++ b/style.css
@@ -69,10 +69,10 @@ nav li a:hover {
 .sub-vis {
   justify-content: space-between;
   height: 300px;
+  width: 100%;
 }
 
 .sub-vis-home {
-  width: 100%;
   height: 200px;
 }
 
@@ -84,4 +84,9 @@ nav li a:hover {
 
 .zoom {
   float: right;
-} 
+}
+
+#lChart {
+  text-align: center;
+  display: block;
+}
