--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 /* Suggested theme colours: #A3F564, #9be564 */
 
 /* Navigation Bar */
+
+
 nav {
   overflow: hidden;
 }
@@ -53,10 +55,12 @@ nav li a:hover {
   margin: 0 auto;
 }
 
-.sub-vis {
+#sub-vis {
   justify-content: space-between;
   height: 300px;
-  width: 100%;
+  /* width: 75%;  Removed for now to match bar graph */
+  width: 1500px;
+  margin: 0 auto;
 }
 
 .sub-vis-home {
@@ -72,6 +76,7 @@ nav li a:hover {
 .zoom {
   float: right;
 }
+
 
 #lChart {
   text-align: center;
