--- a/style.css
+++ b/style.css
@@ -43,14 +43,25 @@ nav li a:hover {
 }
 
 /* Main */
-#overview-vis {
-  text-align: center;
+.vis-container {
+  width: 1500px;
   margin: 0 auto;
 }
 
-#overview-text {
-  width: 1500px;
-  margin: 0 auto;
+.overview-vis {
+  text-align: center;
+}
+
+.y.axis path, .y.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.y.axis path {
+  #display: none;
+  #stroke-width: 0.5px;
+  
 }
 
 .sub-vis {
@@ -77,3 +88,5 @@ nav li a:hover {
   text-align: center;
   display: block;
 }
+
+/* Personal */
