Stacked bar chart & zoom in/out feature

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 /* Suggested theme colours: #A3F564, #9be564 */
 
 /* Navigation Bar */
-
-
 nav {
   overflow: hidden;
 }
@@ -16,7 +14,7 @@ nav h1 {
   float: left;
   padding: 0px 10px;
   width: 20%;
-  height: auto;
+  font-size: 2em;
 }
 
 nav ul {
@@ -24,6 +22,7 @@ nav ul {
   justify-content: center;
   width: 50%;
   list-style-type: none;
+  font-size: 1.25em;
 }
 
 nav li {
@@ -60,12 +59,6 @@ nav li a:hover {
   shape-rendering: crispEdges;
 }
 
-.y.axis path {
-  #display: none;
-  #stroke-width: 0.5px;
-  
-}
-
 #sub-vis {
   justify-content: space-between;
   height: 300px;
@@ -88,6 +81,38 @@ nav li a:hover {
   float: right;
 }
 
+.y.axis {
+  font-size: 1em;
+}
+
+/* Recycle */
+.y.axis .domain {
+  display: none;
+}
+
+.zoomBtn {
+  position: relative;
+  left: 101%;
+  display: inline;
+  cursor: pointer;
+  font-size: 28px;
+  padding: 10px 5px;
+  color: rgb(175, 175, 175);
+}
+
+#zoom-in {
+  position: absolute;
+  top: -22.25em;
+}
+
+#zoom-out {
+  position: relative;
+  top: -21.25em;
+}
+
+#zoom-in:hover, #zoom-out:hover {
+  color:#000;
+}
 
 #lChart {
   text-align: center;
