--- a/style.css
+++ b/style.css
@@ -1,33 +1,24 @@
+/* Theme colours: #A3F564, #9be564 */
+
 * {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/* Suggested theme colours: #A3F564, #9be564 */
-
 /* Navigation Bar */
-nav {
-  overflow: hidden;
-}
-
 nav h1 {
-  overflow: visible;
   float: left;
   padding: 0px 10px;
-  width: 20%;
-  font-size: 2em;
+  width: auto;
+  font-size: 1.75em;
+  margin-right: -15%;
 }
 
 nav ul {
   margin: 0 auto;
   display: flex;
-  justify-content: center;
-  width: 50%;
+  justify-content: space-evenly;
+  width: 30%;
   list-style-type: none;
-  font-size: 1.25em;
-}
-
-nav li {
-  margin: 0px 10px;
 }
 
 nav li a {
@@ -46,12 +37,12 @@ nav li a:hover {
 
 /* Main */
 .vis-container {
-  width: 1500px;
-  margin: 0 auto;
+  width: auto;
+  margin: 2.5% 10%;
 }
 
-.overview-vis {
-  text-align: center;
+.main-vis {
+  width: 1500px;
 }
 
 .y.axis path, .y.axis line {
@@ -60,23 +51,13 @@ nav li a:hover {
   shape-rendering: crispEdges;
 }
 
-#sub-vis {
+/* #sub-vis {
   justify-content: space-between;
   height: 300px;
-  /* width: 75%;  Removed for now to match bar graph */
+  /* width: 75%;  Removed for now to match bar graph 
   width: 1500px;
   margin: 0 auto;
-}
-
-.sub-vis-home {
-  height: 200px;
-}
-
-.sub-vis-home iframe {
-  width: 85%;
-  height: 200px;
-  float: left;
-}
+} */
 
 .zoom {
   float: right;
@@ -86,11 +67,21 @@ nav li a:hover {
   font-size: 1em;
 }
 
+.sub-vis-text {
+  /*margin-top: 17.5%;*/
+}
+
+#pie-text, #area-text {
+  text-align: justify;
+  vertical-align: text-top;
+}
+
 /* Recycle */
 .y.axis .domain {
   display: none;
 }
 
+/* Zoom buttons */
 .zoomBtn {
   position: relative;
   left: 101%;
